RESOLVED FIXED308064
REGRESSION(307595@main): [macOS iOS] TestWebKitAPI.WebpagePreferences.ContentRuleListEnablement is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=308064
Summary REGRESSION(307595@main): [macOS iOS] TestWebKitAPI.WebpagePreferences.Content...
Marta Darbinyan
Reported 2026-02-17 10:38:14 PST
The following test is constant failure across different PRs in EWS after 307595@main. TestWebKitAPI.WebpagePreferences.ContentRuleListEnablement 12:31:24.043 26232 TestWebKitAPI.WebpagePreferences.ContentRuleListEnablement 12:31:24.043 26232 2026-02-16 12:27:45.894 TestWebKitAPI[50416:578711] NSEventConcurrentProcessingEnabled=NO 12:31:24.043 26232 12:31:24.043 26232 /Volumes/Data/worker/macOS-Tahoe-Debug-Build-EWS/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebsitePolicies.mm:1851 12:31:24.043 26232 Value of: canLoadImage(@"./400x400-green.png") 12:31:24.043 26232 Actual: false 12:31:24.043 26232 Expected: true 12:31:24.043 26232 12:31:24.043 26232 12:31:24.043 26232 12:31:24.043 26232 /Volumes/Data/worker/macOS-Tahoe-Debug-Build-EWS/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebsitePolicies.mm:1853 12:31:24.043 26232 Value of: canLoadImage(@"./sunset-in-cupertino-100px.tiff") 12:31:24.043 26232 Actual: false 12:31:24.043 26232 Expected: true 12:31:24.043 26232 12:31:24.043 26232 12:31:24.043 26232 12:31:24.043 26232 /Volumes/Data/worker/macOS-Tahoe-Debug-Build-EWS/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebsitePolicies.mm:1859 12:31:24.043 26232 Value of: canLoadImage(@"./400x400-green.png") 12:31:24.043 26232 Actual: false 12:31:24.043 26232 Expected: true 12:31:24.043 26232 12:31:24.043 26232 12:31:24.043 26232 12:31:24.043 26232 /Volumes/Data/worker/macOS-Tahoe-Debug-Build-EWS/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/WebsitePolicies.mm:1861 12:31:24.043 26232 Value of: canLoadImage(@"./sunset-in-cupertino-100px.tiff") 12:31:24.043 26232 Actual: false 12:31:24.043 26232 Expected: true 12:31:24.043 26232 Test history: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebpagePreferences.ContentRuleListEnablement Test result: https://ews-build.webkit.org/#/builders/165/builds/11027
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-17 10:39:27 PST
Charlie Wolfe
Comment 2 2026-02-18 10:57:26 PST
EWS
Comment 3 2026-02-18 14:20:41 PST
Committed 307786@main (d35ce65010b2): <https://commits.webkit.org/307786@main> Reviewed commits have been landed. Closing PR #58935 and removing active labels.
EWS
Comment 4 2026-02-23 12:11:51 PST
Test gardening commit 308058@main (9109358cb3c4): <https://commits.webkit.org/308058@main> Reviewed commits have been landed. Closing PR #59250 and removing active labels.
Charlie Wolfe
Comment 5 2026-02-23 12:35:51 PST
EWS
Comment 6 2026-02-23 15:39:17 PST
Committed 308081@main (3ca309c6472c): <https://commits.webkit.org/308081@main> Reviewed commits have been landed. Closing PR #59251 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.