REGRESSION(307595@main): [macOS iOS] TestWebKitAPI.WebpagePreferences.ContentRuleListEnablement is a constant failure https://bugs.webkit.org/show_bug.cgi?id=308064 rdar://170566192

Reviewed by Matthew Finkel.

This `shouldApplyConsistently` bool let network requests be blocked from tainted script after
307595@main. It should only enable existing fingerprinting protections.

* Source/WebCore/dom/ScriptExecutionContext.cpp:
(WebCore::ScriptExecutionContext::requiresScriptTrackingPrivacyProtection):

Canonical link: https://commits.webkit.org/307786@main